Added image to Hello World

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     </style>
 </head>
 <body>
+    <div>
+        <img src="choose-2.jpg" alt="Man's Shoes">
+    </div>
     
     <h1>Hello World</h1>
     <p>I am learning Git</p>
