updated index.html with emergency fix

--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     
     <h1>Hello World</h1>
     <p>I am learning Git</p>
+    <p>This line is here to show how merging works.</p>
+    
 </body>
 </html>
