--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <div>
         <img src="choose-2.jpg" alt="Man's Shoes">
     </div>
-    
+    <div>
+        <img src="natural.jpg" alt="Natural Photo">
+    </div>
     <h1>Hello World</h1>
     <p>I am learning Git</p>
 </body>
