--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div>
         <img src="natural.jpg" alt="Natural Photo">
     </div>
-    <h1>Hello World</h1>
+    <h1> Jsca World</h1>
     <p>I am learning Git</p>
     <p>This line is here to show how merging works.</p>
     
