--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </div>
     <h1> Jsca World</h1>
     <p>I am learning Git</p>
+    <p>I am learning merging origin and master(remote)</p>
     <p>This line is here to show how merging works.</p>
     
 </body>
