Updated index.html. Resized image

--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 </head>
 <body>
     <div>
-        <img src="choose-2.jpg" alt="Man's Shoes">
+        <img src="natural1.jpg" alt="Natural1 Photo">
     </div>
     <div>
         <img src="natural.jpg" alt="Natural Photo">
+    </div>
+    <div>
+        <img src="natural2.jpg" alt="Natural2 Photo">
     </div>
     <h1> Jsca World</h1>
     <p>I am learning Git</p>
