update index.html for new branch

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
     <h1> Jsca World</h1>
     <p>I am learning Git</p>
+    <p>Update index.html and move this branch to Github</p>
     <p>I am learning merging origin and master(remote)</p>
     <p>This line is here to show how merging works.</p>
     
