Git clone added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1> Jsca World</h1>
     <h1> Hello World</h1>
     <p>I am learning Git</p>
-
+    <p> Pull Request</p>
     <p>I am learning Git Branch</p>
 
     <p>I am learning merging origin and master(remote)</p>
